--- a/src/main/webapp/WEB-INF/views/admin/enrollments/enrollment-list.html
+++ b/src/main/webapp/WEB-INF/views/admin/enrollments/enrollment-list.html
@@ -2,12 +2,12 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Dashboard</title>
+    <title>Title</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body class="bg-gray-100 text-sm text-gray-800">
-<div th:replace="admin/fragments/header :: header"></div>
+<header th:replace="admin/fragments/header :: header"></header>
 <div class="flex min-h-screen">
     <aside th:replace="admin/fragments/nav :: sidebar"></aside>
 </div>
