--- a/src/main/webapp/WEB-INF/views/user/auth/login.html
+++ b/src/main/webapp/WEB-INF/views/user/auth/login.html
@@ -10,10 +10,12 @@
     <h2 class="text-2xl font-bold mb-6 text-center text-gray-800">Đăng nhập</h2>
 
     <div class="mb-4">
-        <label for="username" class="block text-gray-700 font-semibold mb-1">Tên đăng nhập:</label>
-        <input type="text" id="username" th:field="*{username}"
+        <label for="username" class="block text-gray-700 font-semibold mb-1">Email:</label>
+        <input type="text" id="username" th:field="*{email}"
                class="w-full border border-gray-300 rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-400"
-               placeholder="Nhập tên đăng nhập">
+               placeholder="Nhập email">
+        <p th:if="${#fields.hasErrors('username')}" th:errors="*{email}"
+              class="text-red-500 text-sm mt-1"></p>
     </div>
 
     <div class="mb-6">
@@ -21,11 +23,13 @@
         <input type="password" id="password" th:field="*{password}"
                class="w-full border border-gray-300 rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-400"
                placeholder="Nhập mật khẩu">
+        <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}"
+           class="text-red-500 text-sm mt-1"></p>
     </div>
 
     <div class="mb-6 text-center text-gray-600">
         Chưa có tài khoản?
-        <a th:href="@{user/register}" class="text-blue-500 hover:underline font-semibold">Đăng kí ngay!</a>
+        <a th:href="@{/user/register}" class="text-blue-500 hover:underline font-semibold">Đăng kí ngay!</a>
     </div>
 
     <div>
